--- a/index.html
+++ b/index.html
@@ -1,68 +1,48 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الصفحة الرئيسية</title>
-    <style>
-        body {
-            font-family: 'Cairo', sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4caf50;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            margin: 1rem 0;
-        }
-        nav a {
-            text-decoration: none;
-            color: #4caf50;
-            font-weight: bold;
-        }
-        nav a:hover {
-            color: #388e3c;
-        }
-        .container {
-            padding: 2rem;
-            text-align: center;
-        }
-        footer {
-            background-color: #4caf50;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>صفحة التسجيل</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background-color: #f9f9f9;
+    }
+    .container {
+      max-width: 600px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+    h1 {
+      text-align: center;
+      color: #007bff;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>مرحباً بك في موقعنا</h1>
-    </header>
-    <nav>
-        <a href="about.html">من نحن</a>
-        <a href="app.html">رابط التطبيق</a>
-        <a href="register.html">التسجيل</a>
-        <a href="payment.html">الدفع</a>
-        <a href="sale.html">البيع</a>
-    </nav>
-    <div class="container">
-        <h2>مرحبًا بك!</h2>
-        <p>اكتشف المزيد من خلال الروابط أعلاه.</p>
-    </div>
-    <footer>
-        <p>جميع الحقوق محفوظة &copy; 2024</p>
-    </footer>
+  <div class="container">
+    <h1>تسجيل المستخدم</h1>
+    <form action="activation.html" method="POST">
+      <div class="form-group">
+        <label for="name">الاسم:</label>
+        <input type="text" id="name" name="name" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="email">البريد الإلكتروني:</label>
+        <input type="email" id="email" name="email" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="password">كلمة المرور:</label>
+        <input type="password" id="password" name="password" class="form-control" required>
+      </div>
+      <button type="submit" class="btn btn-primary btn-block">تسجيل</button>
+    </form>
+  </div>
 </body>
 </html>
