--- a/registration.html
+++ b/registration.html
@@ -3,38 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تفعيل الحساب</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>صفحة التسجيل</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      direction: rtl;
-      background-color: #f9f9f9;
-    }
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      background: #fff;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-    h1 {
-      text-align: center;
-      color: #28a745;
-    }
+    body { font-family: Arial, sans-serif; direction: rtl; text-align: right; padding: 20px; background-color: #f4f7fa; }
+    .form-container { max-width: 400px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); }
+    .form-container h1 { text-align: center; color: #007bff; }
+    input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; }
+    button { width: 100%; padding: 10px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #0056b3; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>تفعيل الحساب</h1>
-    <p>تم التسجيل بنجاح. أدخل الكود المرسل إليك لتفعيل حسابك:</p>
-    <form action="verification.html" method="POST">
-      <div class="form-group">
-        <label for="code">الكود:</label>
-        <input type="text" id="code" name="code" class="form-control" required>
-      </div>
-      <button type="submit" class="btn btn-success btn-block">تفعيل</button>
+  <div class="form-container">
+    <h1>التسجيل</h1>
+    <form action="activation.html" method="GET">
+      <label for="email">البريد الإلكتروني:</label>
+      <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
+      <button type="submit">تسجيل</button>
     </form>
   </div>
 </body>
