--- a/activation.html
+++ b/activation.html
@@ -3,33 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>التحقق من الكود</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>تفعيل الحساب</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      direction: rtl;
-      background-color: #f9f9f9;
-    }
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      background: #fff;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-    h1 {
-      text-align: center;
-      color: #007bff;
-    }
+    body { font-family: Arial, sans-serif; direction: rtl; text-align: center; padding: 20px; background-color: #f4f7fa; }
+    .message-container { max-width: 400px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); }
+    .message-container h1 { color: #28a745; }
+    .message-container p { color: #333; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>التحقق من الكود</h1>
-    <p>تم التحقق من الكود بنجاح. يمكنك الآن استخدام التطبيق!</p>
-    <a href="index.html" class="btn btn-primary btn-block">الانتقال إلى الصفحة الرئيسية</a>
+  <div class="message-container">
+    <h1>تم التسجيل بنجاح!</h1>
+    <p>شكراً لتسجيلك. تم تفعيل حسابك بنجاح.</p>
+    <a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background: #007bff; color: white; text-decoration: none; border-radius: 4px;">العودة إلى الصفحة الرئيسية</a>
   </div>
 </body>
 </html>
